--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -4,13 +4,17 @@ jobs:
   deploy_source:
     name: deploy lambda from source
     runs-on: ubuntu-latest
+    env:
+      AWS_DEFAULT_REGION: us-east-1
+
     steps:
       - name: checkout source code
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
+          role-to-assume: arn:aws:iam::580446771729:user/GithubDeployUser
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
