--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -23,7 +23,7 @@ jobs:
           #aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-          role-to-assume: arn:aws:iam::580446771729:oidc-provider/token.actions.githubusercontent.com
+          role-to-assume: arn:aws:iam::580446771729:role/TradingAlgo-Deploy
           role-session-name: samplerolesession
           
 
