--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -20,8 +20,6 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          #aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
           role-to-assume: arn:aws:iam::580446771729:role/TradingAlgo-Deploy
           role-session-name: samplerolesession
@@ -30,8 +28,9 @@ jobs:
       - name: default deploy
         uses: appleboy/lambda-action@master
         with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::580446771729:role/TradingAlgo-Deploy
+          role-session-name: DeployToLambda
           aws_region: us-east-1
           function_name: RiskOnRiskOff
           source: RiskOnRiskOff.py
