--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -34,4 +34,4 @@ jobs:
           role-session-name: DeployToLambda
           aws_region: us-east-1
           function_name: RiskOnRiskOff
-          source: src/RiskOnRiskOff.py
+          source: RiskOnRiskOffLive.py
